--- a/app/views/banners/_promoflowchartheader.html.erb
+++ b/app/views/banners/_promoflowchartheader.html.erb
@@ -10,7 +10,7 @@
 		<td>% of</td>
 		<td colspan="3">Feature</td>
 		<td></td>
-		<td colspan="52">2016</td>
+		<td colspan="52">Year</td>
 	</tr>
 
 	<tr class="bannerrow" align="center">
